added split endpoints for HYSA style & 401K growth
